Add requirements.txt and update imdb.ipynb
* Added a requirements.txt file listing all dependencies for the project. * Updated imdb.ipynb to use df_limited instead of df when writing to SQL.

--- a/imdb-data/imdb.ipynb
+++ b/imdb-data/imdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1cf45a30",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0496bebe",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "9d21b300",
    "metadata": {},
    "outputs": [],
@@ -79,16 +79,16 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.to_sql('name_basics', con=engine, if_exists='replace', index=False, chunksize=100)"
+    "df_limited.to_sql('name_basics', con=engine, if_exists='replace', index=False, chunksize=100)"
    ]
   }
  ],
